--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     </head>
     <body>
         <div class="one">
-            <div class="content"></div>
+            <div class="content">
+                <div class="navigation">
+                    <h2>Header Logo</h2>
+                    <nav>
+                        <ul>
+                            <li><a href="">header link one</a></li>
+                            <li><a href="">header link two</a></li>
+                            <li><a href="">header link three</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
         <div class="two">
             <div class="content"></div>
