--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
                         </ul>
                     </nav>
                 </div>
+                <div class="information">
+                    <div class="text">
+                        <h1>This website is awesome</h1>
+                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                        <button>Sign up</button>
+                    </div>
+                    <div class="image">
+                        <p>this is a placeholder for an image</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="two">
