--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
             </div>
         </div>
         <div class="two">
-            <div class="content"></div>
+            <div class="content">
+                <h2>Some random information.</h2>
+                <div class="image">
+                    <div class="container">
+                        <div class="square"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="container">
+                        <div class="square"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="container">
+                        <div class="square"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="container">
+                        <div class="square"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="three">
             <div class="content"></div>
