Edit README.md for sources, finish third section (susceptible to changes)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
             </div>
         </div>
         <div class="three">
-            <div class="content"></div>
+            <div class="content">
+                <div class="container">
+                    <p>When I was five years old, I was five. How old were you? If you think about it, two plus three is not five. And, it is.</p>
+                    <h2>-Fahad Kaleem, TikTok Philanthropist</p>
+                </div>
+            </div>
         </div>
         <div class="four">
             <div class="content"></div>
