--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
             </div>
         </div>
         <div class="four">
-            <div class="content"></div>
+            <div class="content">
+                <div class="popup">
+                    <div class="text">
+                        <h3>Call to action! It's time!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button>Sign up</button>
+                </div>
+            </div>
+            <div class="footer">Copyright @ The Odin Project 2021</div>
         </div>
     </body>
 </html>
